--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -100,6 +100,7 @@
 	{{ site.data.settings.advanced_settings.footer_js }}
 	{% endif %}
 
+	<script id="dsq-count-scr" src="//pwnjack-github-io.disqus.com/count.js" async></script>
 
 </body>
 
